--- a/ApiRequest/ApiRequest.csproj
+++ b/ApiRequest/ApiRequest.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>FrenchyApps42.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+    <RootNamespace>FrenchyApps42.Web.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
