--- a/WakeOnLan/WakeOnLan.csproj
+++ b/WakeOnLan/WakeOnLan.csproj
@@ -5,6 +5,21 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>FrenchyApps42.System.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+	<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>WakeOnLan</Title>
+    <Authors>Sikelio</Authors>
+    <Company>FrenchyApps42</Company>
+    <PackageProjectUrl>https://github.com/FrApp42/Tools</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/FrApp42/Tools</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
