fix(naming): fixed namespaces from "FrApps42" to "FrApp42"

--- a/System/System.csproj
+++ b/System/System.csproj
@@ -4,10 +4,10 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyName>FrApps42.$(MSBuildProjectName)</AssemblyName>
-    <RootNamespace>FrApps42.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
-    <Title>FrApps42 System</Title>
-    <Authors>FrApps42</Authors>
+    <AssemblyName>FrApp42.$(MSBuildProjectName)</AssemblyName>
+    <RootNamespace>FrApp42.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+    <Title>FrApp42 System</Title>
+    <Authors>FrApp42</Authors>
     <Copyright>GPLv3</Copyright>
     <PackageProjectUrl>https://github.com/FrApp42/Tools</PackageProjectUrl>
     <RepositoryUrl>https://github.com/FrApp42/Tools.git</RepositoryUrl>
