--- a/System/System.csproj
+++ b/System/System.csproj
@@ -15,6 +15,23 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Description>A collection of classes for system operations</Description>
     <PackageTags>system</PackageTags>
+    <PackageLicenseFile>LICENCE.md</PackageLicenseFile>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENCE.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
