--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -15,10 +15,27 @@
 	<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Description>A collection of classes for web operations</Description>
 	<PackageTags>web</PackageTags>
+	<PackageLicenseFile>LICENCE.md</PackageLicenseFile>
+	<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\LICENCE.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="README.md">
+      <PackagePath>\</PackagePath>
+      <Pack>True</Pack>
+    </None>
   </ItemGroup>
 
 </Project>
