--- a/System/System.csproj
+++ b/System/System.csproj
@@ -14,7 +14,7 @@
     <RepositoryType>git</RepositoryType>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Description>A collection of classes for system operations</Description>
-    <PackageTags>system</PackageTags>
+    <PackageTags>system;tools</PackageTags>
     <PackageLicenseFile>LICENCE.md</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <PackageReadmeFile>README.md</PackageReadmeFile>
