fix: updated logo to reversed

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -19,7 +19,7 @@
 	<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
 	<Company>FrenchyApps42</Company>
-	<PackageIcon>Logo.png</PackageIcon>
+	<PackageIcon>logo.png</PackageIcon>
 	<Version>1.0.1</Version>
   </PropertyGroup>
 
@@ -28,7 +28,7 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
-    <None Include="..\Logo.png">
+    <None Include="..\logo.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
