--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -9,7 +9,7 @@
     <Title>FrApp42 Web</Title>
     <Authors>FrenchyApps42, Sikelio, AnthoDingo</Authors>
     <Copyright>GPLv3</Copyright>
-    <PackageProjectUrl>https://github.com/FrApp42/Tools</PackageProjectUrl>
+    <PackageProjectUrl>https://frapp42.github.io/Tools/api.Web/FrApp42.Web.API.html</PackageProjectUrl>
     <RepositoryUrl>https://github.com/FrApp42/Tools.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
 	<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
